Added DFS and BFS buttons

--- a/templates/puzzle.html
+++ b/templates/puzzle.html
@@ -18,7 +18,9 @@
 
         <div class="controls">
             <button id="shuffle-button" class="btn">Shuffle</button>
-            <button id="solve-button" class="btn btn-solve">Solve with A*</button>
+            <button id="a-star-button" class="btn btn-solve">Solve with A*</button>
+            <button id="bfs-button" class="btn btn-solve">Solve with BFS</button>
+            <button id="dfs-button" class="btn btn-solve">Solve with DFS</button>
             <a href="{{ url_for('upload_image') }}" class="btn btn-secondary">Upload New Image</a>
         </div>
         
